dev-combined-vis: Fixed option collision issue when generating drop-down controls for events on clustered/overlapping features.

--- a/web/UKDigitalTwin/example-dt-vis/css/dtvf.css
+++ b/web/UKDigitalTwin/example-dt-vis/css/dtvf.css
@@ -243,7 +243,7 @@ h6 {
 #contentContainer {
   margin-top: 10px;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 70px;
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
